# mm-stack-ptx-ptx-inject-bench

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  ptx_inject.h  stack_ptx.h  stack_ptx_cubin_bench_standalone.c  stack_ptx_descriptions.h  stack_ptx_inject_kernel_gen.c  stack_ptx_inject_kernel_gen.h
benchmarks/: gh200_64_core_arm.txt  ryzen_9900X_12_core_NO_SMT.txt  ryzen_9900X_12_core_SMT.txt
